TAG: rvload-6-0-10-1
DATE: 5/30/2017
STAFF: sc
CHANGES: rvQC.py - add to error reporting  when extra blank lines indicate
  no RV/incomplete stanza

TAG: rvload-6-0-6-1
DATE: 10/25/2016
STAFF: lec 
CHANGES:
bin/rvload.sh : fixed documentation

TAG: rvload-6-0-4-1
DATE: 06/16/2016
STAFF: lec 
CHANGES:
1) convert to git

TAG: rvload-6-0-3-1
DATE: 4/5/2016
STAFF: dbm
CHANGES:
1) Install: Remove use of /hobbiton mount

TAG: rvload-6-0-0-2
DATE: 08/25/2015
STAFF: dbm
CHANGES:
1) bin/rvload.sh: Use "test" instead of "env test"

TAG: rvload-6-0-0-1
DATE: 07/24/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: rvload-5-2-2-1
DATE: 05/02/2015
STAFF: dbm
CHANGES:
1) bin/rvQC.sh: Changed "no sanity error" message to avoid checklog warnings

TAG: rvload-tr11750-BP
DATE: 05/28/2015
STAFF: kstone

TAG: rvload-5-1-9-2
DATE: 07/17/2014
STAFF: sc
CHANGES: production release tag
1) Install - update 'rohan' to 'lindon'
2) uncomment 'touch ${LASTRUN_FILE}'

TAG: rvload-5-1-9-1
DATE: 07/03/2014
STAFF: sc
CHANGES: alpha build tag

TAG: rvload-5-1-7-12
TAG: rvload-5-1-7-11
DATE: 05/12/2014
STAFF: sc
CHANGES: Feature Relationship project TR1560 US29 Finalize
1) Install - permissions for publish
2) publishRv - added
3) rvQC.sh, rvQC.py, rvload.sh - comments, etc

TAG: rvload-5-1-7-10
DATE: 04/04/2014
STAFF: sc
CHANGES: comments only

TAG: rvload-5-1-7-9
DATE: 03/13/2014
STAFF: sc
CHANGES:
1) Added check for no actual synonym value

TAG: rvload-5-1-7-8
DATE: 03/10/2014
STAFF: sc
CHANGES:
1) continue when no ':' in RV ID - don't try to split suffix/prefix

TAG: rvload-5-1-7-7
DATE: 03/10/2014
STAFF: sc
CHANGES:
1) Added checking of alt_id's

TAG: rvload-5-1-7-6
TAG: rvload-5-1-7-5
TAG: rvload-5-1-7-4
TAG: rvload-5-1-7-3
TAG: rvload-5-1-7-2
DATE: 03/07/2014
STAFF: sc
CHANGES:
1) added bin/runRvQC bin/rvQC.sh bin/rvQC.py
2) rvload.config.default - added OBO_FILE_VERSION=1.2
2) rvload.sh - added call to QC

TAG: rvload-5-1-7-1
DATE: 03/05/2014
STAFF: sc
CHANGES: TR11560 Feature Relationships