@@ -124,6 +124,12 @@ rm -rf ${LOG}
 touch ${LOG}
 
 #
+# Convert the input file into a QC-ready version that can be used to run
+# the sanity/QC reports against.
+#
+dos2unix ${INPUT_FILE} ${INPUT_FILE} 2>/dev/null
+
+#
 # Initialize the report files to make sure the current user can write to them.
 #
 rm -f ${SANITY_RPT}; >${SANITY_RPT}
