@@ -1,3 +1,8 @@
+TAG: rvload-6-0-11-6
+DATE: 01/04/2018
+STAFF: sc
+CHANGES: TR12599 - add dos2unix to convert input file
+
 TAG: rvload-6-0-10-1
 DATE: 5/30/2017
 STAFF: sc
